# leet_code

./: .gitignore  5. Longest Palindromic Substring.py  Bellman_Ford.py  LICENSE  README.md  calc_square_eq_solver.py  compress_array.py  is_palindrom.py  proba.py  pyproject.toml  roman_to_arab.py  two_sum.py
Exercism/: armstrong_numbers.py  black_jack.py  classes.py  collatz_conjecture.py  conditionals.py  dicts.py  dicts_methods.py  exchange.py  generators.py  grains.py  list_methods.py  lists.py  locomotive_engineer.py  loops.py  run_length_encoding.py  sets.py  strings.py  triangle.py  tuples.py
T_bank_context/: 1_задание.py  2_задание.py  3_задание.py  6_задание.py
Yandex_Contest/: B_Шашки.py  G_Камни и украшения [тестовая задача].py  Е_Голодные_игры.py
Yandex_handebook/: 11111111111.py  2222222222.py  cyrillic.txt  example.py  example2.py  input_1.txt  odd.txt  second.txt
coderun_yandex_session1/: 111111.py  _155_Уникальные_элементы.py  _182_Закрытый_ключ.py  _422_Две_команды.py  _423_ Ближайшая_остановка.py  _424_Счастливый_номер.py  _430_Парные_коды.py  _439_Пара_букв.py  _444_Крестики-нолики.py  _6_Средний_элемент.py
examples/: method_list.py
solutions/: 3sum.py  Add_Two_Numbers.py  Sort_an_Array.py  String_to_Integer_atoi.py  Zigzag_Conversion.py  _1035_Uncrossed_Lines.py  _1046_Last_Stone_Weight.py  _1161_Maximum_Level_Sum_Binary_Tree.py  _1372_Longest_ZigZag_Path_Binary_Tree.py  _1431_ Kids_With_Greatest_Number.py  _1514_Path_with_Maximum_Probability.py  _1524_Number_Sub-arrays_With_Odd_Sum.py  _1732_Find_the_Highest_Altitude.py  _36_Valid_sudoku.py  (+25 more)
(+27 files in other folders)
