[tool.poetry]
name = "leet-code"
version = "0.1.0"
description = ""
authors = ["Андрей Черняев <ChernyaevAV@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.2.2"
numpy = "^2.0.1"
ruff = "^0.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
